--- a/front/css/estilos.css
+++ b/front/css/estilos.css
@@ -5,9 +5,15 @@
     color: rgba(255, 255, 255, 0.884);
 }
 
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
 .container {
     border: 3px solid black;
     width: 100%;
+    padding-right: 0px;
 }
 
 .campo_nome {
@@ -20,5 +26,31 @@
     position: relative;
     left: 25px;
     width: 250px;
+}
+
+.saida0 {
+    font-size: large;
+}
+
+#formulario_agentes {
+    position: relative;
+    border: 1px solid #999;
+    border-radius: 8px;
+    font-size: 20px;
+    color: #302e2e;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+#formulario_agentes legend {
+    position: absolute;
+    top: -0.5em;
+    left: 10px;
+    background: rgba(255, 255, 255);
+    line-height: 1.0em;
+    width: auto;
+    font-weight: bold;
+    color: black;
+
 }
 
